2009-08-26 Borut Razem <borut.razem AT siol.net>

	* as/asxxsrc/sdas.c, as/asxxsrc/sdas.h: added
	* as/asxxsrc/asmain.c: calls sdas
	* src/z80/main.c: unified as-z80 and as-gbz80 call convention with
	  other assemblers
	* as/hc08/Makefile.in, as/mcs51/Makefile.in, as/z80/Makefile.in, 
	  as/hc08/as_hc08.dsp, as/mcs51/asx8051.dsp, as/z80/as_gbz80.dsp,
	  as/z80/as_z80.dsp: updated project files
	* device/lib/z80/Makefile.in, device/lib/gbz80/Makefile.in:
	  unified call convention, sync with device/lib/z80/Makefile.in
	* as/asxxsrc/aslist.c: as/mcs51/aslist.c moved to as/asxxsrc/aslist.c
	* as/asxxsrc/asxxxx.h, as/z80/asout.c, as/mcs51/asout.c,
	  as/hc08/asout.c:
	  HUGE changed to ASXXXX_HUGE due to redefinition in math.h
	* as/asxxsrc/asmain.c: forced wflag and zflag
	* as/z80/aslist.c, as/mcs51/aslist.c, as/hc08/aslist.c: removed

2009-08-25 Borut Razem <borut.razem AT siol.net>

	* as/hc08/Makefile.in, as/mcs51/Makefile.in, as/z80/Makefile.in:
	  removed duplicated asdata.c
	* as/hc08/aslist.c, as/hc08/asmain.c, as/hc08/asout.c,
	  as/mcs51/aslist.c, as/mcs51/asmain.c, as/mcs51/asout.c:
	  fixed copy&paste problem in S_ORG
	* as/asxxsrc/asmain.c, as/hc08/Makefile.in, as/mcs51/Makefile.in,
	  as/z80/Makefile.in,
	* as/mcs51/asx8051.dsp, as/z80/as_z80.dsp, as/hc08/as_hc08.dsp,
	  as/z80/as_gbz80.dsp: as/mcs51/asmain.c moved to s/asxxsrc/asmain.c
	* as/hc08/asmain.c, as/z80/asmain.c: removed
	* as/asxxsrc/asmain.c, as/asxxsrc/asdata.c, as/asxxsrc/asxxxx.h:
	  added wflag and zflag
	* as/hc08/aslist.c, as/hc08/asout.c, as/mcs51/aslist.c,
	  as/mcs51/asout.c: fixed compiler wrning about unused variables

2009-08-24 Borut Razem <borut.razem AT siol.net>

	* as/asxxsrc/asdata.c, as/asxxsrc/asxxxx.h, as/asxxsrc/aslex.c,
	  as/asxxsrc/asnoice.c, as/asxxsrc/assubr.c, as/asxxsrc/assym.c,
	  as/hc08/asexpr.c, as/hc08/aslist.c, as/hc08/asmain.c,
	  as/hc08/asout.c, as/hc08/m08adr.c, as/hc08/m08ext.c,
	  as/hc08/m08mch.c, as/hc08/m08pst.c, as/mcs51/asexpr.c,